# 331_Edge_LLM_RK

./: Edge-LLM-Infra-Architecture-Analysis.md  README.md
sample/: test.py
unit-manager/: .CMakeLists.txt.swp  CMakeLists.txt
unit-manager/src/: remote_action.cpp  remote_server.cpp
